# ggj2025

./: Cargo.toml  out_side.json  readme.md  shop_1_ask.json  shop_greating.json  story.json  story.ron
assets/: Sprite-0001.aseprite
assets/GGJ_25/: bub_soap.xcf  bubble_01.xcf  bubble_02.xcf  bubble_03.xcf  bubble_04.xcf  bubble_05.xcf  bubble_10.xcf
src/: buble.rs  button.rs  main.rs  story.rs  text.rs
story/: .~lock.first_idea.csv#  .~lock.first_idea.ods#  csv_to_db.py  csv_to_db_02.py  csv_to_db_03.py  csv_to_db_04.py  csv_to_db_05.py  first_idea.csv  first_idea.ods  questions_and_answers.json  text_adventure.json
story/json_files/: 00001.json  00003.json  00004.json  00006.json  00007.json  00008.json  00009.json  00010.json  00011.json  00012.json  00013.json  00014.json  00015.json
story/output_jsons/: question_000.json  question_001.json  question_002.json  question_003.json  question_004.json  question_005.json  question_006.json  question_007.json  question_008.json  question_009.json  question_010.json  question_011.json  question_012.json  question_013.json
test_story/: shop_1_ask.json  shop_greating.json
