[package]
name = "ggj2025"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy-inspector-egui = "0.28.1"
ron = "0.8"
serde_json = "1.0.137"

[dependencies.bevy]
version = "0.15.1"
features = [
"dynamic_linking",
]

[dependencies.serde]
version = "1.0.217"
featurs = [
"derive"
]



[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
